# rag-backend

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.worker  database.py  docker-compose.yml  main.py  pyproject.toml  requirements-worker.txt  tasks.py
routers/: auth.py  chats.py  files.py  projects.py  users.py
src/: server.py
src/agents/: simple_agent.py
src/config/: appConfig.py  log_config.py
src/models/: schemas.py
src/rag/ingestion/: ingestion.py  utils.py
src/rag/retrieval/: retrieval.py  utils.py
src/routes/: chatRoutes.py  projectFilesRoutes.py  projectRoutes.py  userRoutes.py
src/services/: awsS3.py  celery.py  clerkAuth.py  llm.py  supabase.py  webScrapper.py
src/utils/: util.py
supabase/: config.toml
supabase/migrations/: 20260408160239_chunk_search_functions.sql
